--- a/frontend/app.yaml
+++ b/frontend/app.yaml
@@ -1,11 +1,9 @@
-runtime: nodejs
-env: flex
+runtime: nodejs14
 
-# This sample incurs costs to run on the App Engine flexible environment.
-  # The settings below are to reduce costs during testing and are not appropriate
-# for production use. For more information, see:
-# https://cloud.google.com/appengine/docs/flexible/nodejs/configuring-your-app-with-app-yaml
-manual_scaling:
-  instances: 1
-resources:
-  cpu: 1
+handlers:
+- url: /
+  static_files: build/index.html
+  upload: build/index.html
+- url: /(.*)
+  static_files: build/\1
+  upload: build/(.*)
