--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,20 +1,13 @@
-# pull official base image
-FROM node:13.12.0-alpine
+FROM node AS build
 
-# set working directory
 WORKDIR /app
+COPY . .
 
-# add `/app/node_modules/.bin` to $PATH
-ENV PATH /app/node_modules/.bin:$PATH
+RUN yarn build
 
-# install app dependencies
-COPY package.json ./
-COPY package-lock.json ./
-RUN npm install --silent
-RUN npm install react-scripts@3.4.1 -g --silent
+FROM nginx:stable
 
-# add app
-COPY . ./
+COPY — from=build /app/build/ /var/www
+COPY ./nginx.conf /etc/nginx/conf.d/default.conf
 
-# start app
-CMD ["npm", "start"]
+CMD ["nginx -g 'daemon off;'"]
