get all notes from spanner

--- a/backend/sample.copy.env
+++ b/backend/sample.copy.env
@@ -5,3 +5,7 @@ DB_NAME=YOUR_DATABASE_NAME
 
 GCP_PROJECT_ID=YOUR_GCP_PROJECT_ID
 BUCKET_NAME=YOUR_BUCKET_NAME
+
+projectId=YOUR_SPANNER_PROJECT_ID
+instanceId = YOUR_SPANNER_INSTANCE_ID
+databaseId = YOUR_DATABASE_SPANNER_ID
