--- a/backend/package.json
+++ b/backend/package.json
@@ -5,11 +5,12 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "node server.js"
+    "serve": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/spanner": "^5.7.0",
     "@google-cloud/storage": "^5.8.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
