--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "nanoid": "^3.1.23",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
