CRUD notes using spanner, update readme

--- a/backend/sample.copy.env
+++ b/backend/sample.copy.env
@@ -7,5 +7,6 @@ GCP_PROJECT_ID=YOUR_GCP_PROJECT_ID
 BUCKET_NAME=YOUR_BUCKET_NAME
 
 projectId=YOUR_SPANNER_PROJECT_ID
-instanceId = YOUR_SPANNER_INSTANCE_ID
-databaseId = YOUR_DATABASE_SPANNER_ID
+instanceId=YOUR_SPANNER_INSTANCE_ID
+databaseId=YOUR_DATABASE_SPANNER_ID
+tableName=YOUR_TABLE_SPANNER
