--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/pubsub": "^2.12.0",
     "@google-cloud/spanner": "^5.7.0",
     "@google-cloud/storage": "^5.8.1",
     "body-parser": "^1.19.0",
