update readme and change env

--- a/backend/sample.copy.env
+++ b/backend/sample.copy.env
@@ -12,3 +12,4 @@ databaseId=YOUR_DATABASE_SPANNER_ID
 tableName=YOUR_TABLE_SPANNER
 
 topicName=YOUR_PUBSUB_TOPIC_NAME
+subscriptionName=YOUR_SUBSCRIPTION_NAME
