get firestore by id and update readme

--- a/backend/sample.copy.env
+++ b/backend/sample.copy.env
@@ -13,3 +13,5 @@ tableName=YOUR_TABLE_SPANNER
 
 topicName=YOUR_PUBSUB_TOPIC_NAME
 subscriptionName=YOUR_SUBSCRIPTION_NAME
+
+COLLECTION_NAME=YOUR_COLLECTION_NAME
